@@ -101,6 +101,11 @@
     <define-tag name="ldflags-dmars" rules="exe,dll,module"/>
 
     <define-tag name="uid" rules="exe,dll,module"/>
+    <define-tag name="headers" rules="exe,lib,dll,module"/>
+    <define-tag name="install-to" rules="exe,lib,dll,module"/>
+    <define-tag name="install-headers-to" rules="exe,lib,dll,module"/>
+    <define-tag name="install-if" rules="exe,lib,dll,module"/>
+
 
     <!-- =============================================================== -->
     <!--                     Common tags description:                    -->
@@ -139,6 +144,7 @@
     <tag-info name="symbian-res" exclusive="1"/>
 
     <tag-info name="install-to" exclusive="1"/>
+    <tag-info name="install-headers-to" exclusive="1"/>
     <tag-info name="install-if" exclusive="1"/>
     <tag-info name="installable" exclusive="1"/>
 
