@@ -1,0 +1,11 @@
+#include <stdio.h>
+
+// this header file is used just to test
+// the header (un)install bakefile support
+#include "hello.h"
+
+int main()
+{
+    func("Hello, world!\n");
+    return 0;
+}
